# satGraph2

./: CMakeLists.txt  LICENSE  README.md  build_macos.sh  build_ubuntu.sh  icon.icns  satgraf.desktop
.github/workflows/: release.yml
.opencode/skills/openspec-archive-change/: SKILL.md
doc/: algorithms.md  architecture.md  core-modules.md  evolution.md  gui.md
openspec/changes/add-pac-release-github-action/: design.md  proposal.md  tasks.md
openspec/changes/add-pac-release-github-action/specs/release-packaging/: spec.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/specs/community-detection/: spec.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/specs/evolution-engine/: spec.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/specs/graph-model/: spec.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/specs/gui/: spec.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/specs/layout-engine/: spec.md
openspec/changes/archive/2026-04-09-cpp-rewrite-satgraf/specs/solver-integration/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/community-z-order/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/gui/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/info-panel-enrichment/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/layout-engine/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/node-text-selection/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/rendering/: spec.md
openspec/changes/archive/2026-04-09-enrich-info-panel/specs/rendering-modes/: spec.md
openspec/changes/archive/2026-04-09-fix-render-thread-safety/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-fix-render-thread-safety/specs/gui/: spec.md
openspec/changes/archive/2026-04-09-fix-render-thread-safety/specs/rendering-modes/: spec.md
openspec/changes/archive/2026-04-10-add-macos-build-packaging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-add-macos-build-packaging/specs/gui/: spec.md
openspec/changes/archive/2026-04-10-add-macos-build-packaging/specs/macos-packaging/: spec.md
openspec/changes/archive/2026-04-10-lazy-render-modes/: tasks.md
openspec/changes/archive/2026-04-10-lazy-render-modes/specs/rendering-modes/: spec.md
openspec/changes/lazy-render-modes/: design.md  proposal.md  tasks.md
openspec/changes/lazy-render-modes/specs/community-layout/: spec.md
openspec/changes/lazy-render-modes/specs/layout-engine/: spec.md
openspec/specs/community-z-order/: spec.md
openspec/specs/dimacs-parser/: spec.md
openspec/specs/export/: spec.md
openspec/specs/gui/: spec.md
openspec/specs/info-panel-enrichment/: spec.md
openspec/specs/layout-engine/: spec.md
openspec/specs/node-text-selection/: spec.md
openspec/specs/render-pipeline/: spec.md
openspec/specs/rendering/: spec.md
openspec/specs/rendering-modes/: spec.md
src/app/: CMakeLists.txt  main.cpp  resources.qrc
src/core/: CMakeLists.txt
src/core/include/satgraf/: clause.hpp  community_detector.hpp  community_graph.hpp  community_node.hpp  csr.hpp  dimacs_parser.hpp  dimacs_writer.hpp  edge.hpp  evolution.hpp  graph.hpp  layout.hpp  node.hpp  solver.hpp  types.hpp  union_find.hpp
src/gui/: CMakeLists.txt
src/gui/include/satgraf_gui/: export.hpp  graph_renderer.hpp  graph_view_3d.hpp  main_window.hpp
tests/: CMakeLists.txt  test_community_detection.cpp  test_dimacs_parser.cpp  test_evolution.cpp  test_graph_model.cpp  test_gui.cpp  test_layout.cpp  test_solver.cpp
tests/data/: multiline.cnf  named.cnf  simple.cnf
